Feature/code quality improvements (#97)
Signed-off-by: jmillar0046 <JosephMillar_261@hotmail.com>